www/guis/admin/public/templates/default/css/main.css
/* URL source ---> hhttp://gate-pp2-jessie.mailcleaner.net/admin/templates/current/css/main.css */
/* Page exemple ---> https://demo.mailcleaner.net/admin/ */

/**
 * @license http://www.mailcleaner.net/open/licence_en.html Mailcleaner Public License
 * @package mailcleaner
 * @author Olivier Diserens, John Mertz
 * @copyright 2009, Olivier Diserens; 2023, John Mertz
 */

/** main divs **/
#container {
    position:relative;
    margin:0 auto;
    height:auto !important;
    height: 100%;
    min-height: 100%;
    width: 100%;
    min-width: 955px;
}

#pagehead {
    overflow: auto;
    height: 100%;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

#mainheader {
    width: 100%;
    height: 76px;
    margin: 0px;
    background-image:none;
    background-color: #e8e8e8; /*__MAINHEADERBG__*/
    background-repeat: repeat-x;
    color: white;
    text-align: left;
    vertical-align: top;
    white-space: nowrap;
    overflow: auto;
}

#mclogo {
    float: left;
}

/* status panel */
#statuspanel {
    background-image:url("../images/status_panel.png");
    background-repeat: no-repeat;
    float: right;
    height: 52px;
    width: 264px;
    margin-top: 12px;
    margin-right: 12px;
}

#statuslist {
    margin: 0px;
    margin-left: 108px;
    margin-top: 7px;
    padding: 0px;
    list-style-type: none;
    color: #ED7B00;
}

#statuslist a {
    color: #FF2F00;
}

.statusbullet {
    margin: 0px;
    margin-right: 8px;
}

#statusloadingimg {
    margin-left: 170px;
    margin-top: 18px;
}

#statusreloadimg {
    float: right;
    margin-top: 42px;
    margin-right: -257px;
    display: none;
}

#pagecontent {
    padding-bottom: 30px;
    overflow: auto;
    border-top: 1px solid #D4D3D2;
    top:200px;
}

#pagefoot {
    position: fixed;
    bottom: 0px;
    height: 24px;
    width: 100%;
    overflow: hidden;
    background-color: #F5F5F5;
}

/* legal panel */
#legalpanel {
    border-top: 1px solid #CBC1C8;
    color: #552056;
    width: 100%;
    line-height: 22px;
}
#legalpanel p {
    margin: 0px;
    padding: 0px;
    padding-left: 15px;
    padding-right: 15px;
    line-height: 22px;
}

#copyright {
    float: left;
    color: #A589A5;
    font-size: 11px;
    display: inline;
    line-height: 23px;
}

#company {
    display: inline;
    float:right;
    font-size: 9px;
    color: #AA2056;
    line-height: 23px;
}

/* internal parts */
#generalconfigpanel {
    margin: 40px;
    height: 100%;
    border: 1px solid #D4D3D2;
    background: #FFFFFF;
    overflow: hidden;
    text-shadow:0px 1px #FFF;
}

.contentheadicon {
    float: left;
    margin: 0px;
    padding: 0px;
    height: 48px;
    line-height: 48px;
    width: 184px;
    background-image:none;
    background-color: #F5F5F5;
    border-bottom: 1px solid #D4D3D2;
    border-right: 1px solid #D4D3D2;
    overflow: hidden;
    white-space: nowrap;
}
.contentheadicon img {
    margin-left: 13px;
    display: inline;
    border: 0px;
    vertical-align: middle;
}
.contentheadtitle {
    margin: 0px;
    padding: 0px;
    padding-left: 54px;
    height: 48px;
    line-height: 52px;
    background-image:none;
    background-color: #F5F5F5;
    border-bottom: 1px solid #D4D3D2;
    overflow: hidden;
    white-space: nowrap;
    font-weight: bold;
    color: #ED7B00;
    font-size: 13px;
    text-shadow:0px 1px #FFF;
}

#generalconfigmenu {
    float: left;
    list-style:none;
    margin: 0px;
    padding: 0px 0px 20px 0px;
    margin-top: 54px;
    width: 184px;
    border-top: 1px solid #D4D3D2;
    line-height: 18px;
    overflow: hidden;
    font-size: 12px;
    background-color: #FFFFFF;
}

#generalconfigmenu li {
    height: 28px;
    margin: -1px 0px 0px 0px;
    padding: 8px 0px 0px 0px;
    border-bottom:none;
    line-height: 24px;
    padding-left: 13px;
    text-shadow:0px 1px #FFF;
}

#generalconfigmenu li a {
    color: #666666;
    text-decoration: none;
}
#generalconfigmenu li:hover {
    cursor: pointer;
    background-image:none;
    background-color: #F5F5F5;
}

.generalconfigmenuselected {
    background-image:none;
    background-color: #F5f5f5 !important;
    border-bottom: 1px solid #D4D3D2 !important;
    border-top: 1px solid #D4D3D2 !important;
    font-weight: bold;
}

.generalconfigmenuselected a {
    color: #000000 !important;
}

#generalconfigcontent {
    float: left;
    padding: 0px;
    margin: 0px;
    min-height: 450px;
    margin-top: 0px;
    padding-top: 54px;
    padding-bottom: 20px;
    padding-left: 54px;
    font-size: 12px;
    color: #666666;
    overflow: visible;
    white-space: normal;
    max-width: 628px;
    border-left: 1px solid #D4D3D2;
}

#generalconfigcontent h1,h2 {
    color: #000000;
    text-decoration: underline;
    font-weight: bold;
    margin: 0px;
    margin-top: 8px;
    margin-bottom: 8px;
    padding: 0px;
    background-color: #F5F5F5;
}

#generalconfigcontent h2 {
    text-decoration: none;
}
#generalconfigcontent h4 {
    display: inline;
    font-weight: bold;
    text-decoration: none;
}

#generalconfigcontent p {
    margin: 0px;
    margin-top: 2px;
    text-align: left;
    padding: 0px;
    line-height: 16px;
}

#generalconfigcontent li {
    margin-top: 10px;
}

#generalconfigcontent img {
    border: 0px;
    margin: 0px;
    padding: 0px;
    vertical-align: top;
}

.actionslist {
    margin-top: 0px !important;
}

.actions {
    line-height: 16px;
    margin-top: 5px !important;
}

/* tooltip */
#tooltip {
    position: absolute;
    display: none;
    top: 0px;
    padding-left:6px;
    padding-right: 6px;
    padding-top: 3px;
    padding-bottom: 3px;
    background-color: #F5F5F5;
    border:1px solid #D4D3D2;
    z-index: 10;
}

/* config stuff */

#generalconfigcontent {
    color: #000000;
    width: 730px;
}
/* ... */

